fix: finalize lab2 implementation and endpoints